--- a/assets/css/collapse.css
+++ b/assets/css/collapse.css
@@ -20,3 +20,24 @@
     overflow: hidden;
     /* background-color: #f1f1f1; */
   }
+
+	#project-showcase {
+		-moz-transition: -moz-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+		-webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+		-ms-transition: -ms-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+		transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+		-moz-transition-delay: 0.35s;
+		-webkit-transition-delay: 0.35s;
+		-ms-transition-delay: 0.35s;
+		transition-delay: 0.35s;
+  }
+
+#project-showcase {
+		-moz-transition: opacity 0.75s ease-in-out;
+		-webkit-transition: opacity 0.75s ease-in-out;
+		-ms-transition: opacity 0.75s ease-in-out;
+		transition: opacity 0.75s ease-in-out;
+		border: 0.1rem solid white;
+		border-radius: 50%;
+		box-shadow: 0px 0px 10px 10px #fff;
+	}
